--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-#spring.sendgrid.api-key=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
-#spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3306/exp_live_05032020?useUnicode=true&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.sendgrid.api-key=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
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://qf5dic2wzyjf1x5x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/t8o7g6sedmd8qnfs
+spring.datasource.username=h418a19flogguljx
+spring.datasource.password=eloxe5cla0vhbmsq
+
